--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -657,30 +657,32 @@ header .navbar ul li a:hover {
 @media screen and (max-width: 600px) {
   .education .box-container .box {
     flex-direction: column;
-    width: 100%;
+    width: 95%;
   }
+
   .education .box-container .box .image {
     width: 100%;
-    height: 25rem;
+    height: auto;
   }
+
   .education .box-container .box img {
     width: 100%;
+    height: auto;
+    object-fit: cover;
   }
+
   .education .box-container .box .content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
     padding: 1rem;
-    flex-wrap: wrap;
-    flex: 0;
+    flex: unset;
   }
+
   .education .btns {
-    margin-top: 2rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 2rem 1rem 0;
     flex-wrap: wrap;
   }
 }
+
 /* education media queries ends*/
 /* education section ends */
 
